Implementate correttamente le risposte ai messaggi
-Modifcata la tabella messages nel database per includere l'id del messaggio a cui si sta rispondendo (se presente)
-Aggiunto l'endpoint per ottenere un singolo messaggio
-Modificato il frontend per adattarlo alla logica di invio delle risposte
